samples/_failures_safe/1761087844_5bd1c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00ab275b.c: In function ‘main’:
./samples/SAFE/__tmp_00ab275b.c:151:12: error: missing terminating " character
  151 |     printf("Testing compression algorithms on %zu
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_00ab275b.c:151:5: error: expected expression at end of input
  151 |     printf("Testing compression algorithms on %zu
      |     ^~~~~~
./samples/SAFE/__tmp_00ab275b.c:151:5: error: expected declaration or statement at end of input
